# nk-theme-editor

./: CMakeLists.txt  LICENSE.md  README.md  run_cmake.bat  run_cmake.sh
src/: CMakeLists.txt  main.cpp  main.hpp  update_sources.py
src/assets/: config.ini
src/assets/themes/: armygreen.ini  blueLichen.ini  bluewhite.ini  chocolate.ini  coffee.ini  matrix.ini  purple.ini  red.ini  sand.ini  steelblue.ini  steelgray.ini
src/common/: overview.hpp
src/gui/: gui.hpp  nk_setup.hpp  nuklear_sdl_renderer.h  themes.hpp
src/io/: portini.h
